--- a/src/assets/css/blocks/main/auth-page/user-desktop/header-user-desktop/header-user-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/user-desktop/header-user-desktop/header-user-desktop.scss
@@ -42,7 +42,7 @@
 
   padding-right: 10vw;
 
-  color: #A4A4A4;
+  color: #a4a4a4;
 }
 
 .info-room__count-users::before {
@@ -78,7 +78,7 @@
   line-height: adaptiveSizePx(15, 17, $_smDesktopWidth, $_maxDesktopWidth);
   text-transform: capitalize;
 
-  color: #8D8D8D;
+  color: #8d8d8d;
 
   border-radius: 5px;
   border: 0.5px solid rgba(0, 0, 0, 0.24);
