--- a/src/index.scss
+++ b/src/index.scss
@@ -5,16 +5,15 @@
 @import "./assets/css/mixins.scss";
 @import "./assets/css/variables.scss";
 @import "./assets/css/global.scss";
-@import "./assets/css/blocks/preload/preload-main.scss";
-@import "./assets/css/blocks/form/form-main.scss";
-@import "./assets/css/blocks/header/header.scss";
-@import "./assets/css/blocks/sign-in/sign-in.scss";
+// @import "./assets/css/blocks/preload/preload-main.scss";
+// @import "./assets/css/blocks/form/form-main.scss";
+// @import "./assets/css/blocks/header/header.scss";
+// @import "./assets/css/blocks/sign-in/sign-in.scss";
 @import "./assets/css/blocks/background-img/background-image.css";
-@import "./assets/css/blocks/main/no-auth-page/main-no-auth-page.scss";
-@import "./assets/css/blocks/main/auth-page/main-desktop.scss";
+// @import "./assets/css/blocks/main/no-auth-page/main-no-auth-page.scss";
+// @import "./assets/css/blocks/main/auth-page/main-desktop.scss";
 @import "./assets/css/blocks/main/auth-page/side-bar/side-bar.scss";
-@import "./assets/css/blocks/main/auth-page/add-channel/add-channel.scss";
+// @import "./assets/css/blocks/main/auth-page/add-channel/add-channel.scss";
 @import "./assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss";
 @import "./assets/css/blocks/main/auth-page/user-desktop/user-desktop.scss";
 @import "./assets/css/blocks/main/auth-page/user-info/user-info.scss";
-
