--- a/src/assets/css/blocks/header/header.scss
+++ b/src/assets/css/blocks/header/header.scss
@@ -1,197 +1,207 @@
-.header {
-  padding-left: 7%;
+// .header {
+//   padding-left: 7%;
 
-  background-color: #25272a;
+//   background-color: #25272a;
 
-  border-bottom: 3px solid #fff;
+//   border-bottom: 3px solid #fff;
 
-  z-index: 22;
-}
+//   z-index: 22;
+// }
 
-.container-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+// .container-header {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-between;
 
-  height: 100%;
-}
+//   height: 100%;
+// }
 
-.logo {
-  align-self: center;
-}
+// .logo {
+//   align-self: center;
+// }
 
-.logo-link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+// .logo-link {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
 
-.logo__title {
-  font-family: $sansFont;
-  font-size: adaptiveSizePx(20, 24, 768, 1440);
+// .logo__title {
+//   font-family: $sansFont;
+//   font-size: adaptiveSizePx(20, 24, 768, 1440);
 
-  color: #fff;
+//   color: #fff;
 
-  padding-bottom: 7px;
-}
+//   padding-bottom: 7px;
+// }
 
-.logo-link__text {
-  display: flex;
-  justify-content: center;
-}
+// .logo-link__text {
+//   display: flex;
+//   justify-content: center;
+// }
 
-.user-profile {
-  display: flex;
-  flex-direction: row;
+// .user-profile {
+//   //
+//   display: flex;
+//   flex-direction: row;
 
-  padding-right: 2%;
-}
+//   padding-right: 2%;
+// }
 
-.wrapper-link-menu {
-  position: relative;
+// .wrapper-link-menu {
+//   //
+//   position: relative;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+// }
 
-.response-menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
+// .response-menu {
+//   //
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: flex-start;
+// }
 
-.sign-link {
-  font-family: $sansFont;
+// .sign-link {
+//   font-family: $sansFont;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
 
-  align-self: center;
+//   align-self: center;
 
-  margin-left: adaptiveSizePx(5, 50, $_smPhoneWidth, $_maxDesktopWidth);
-  padding-top: adaptiveSizePx(7, 10, $_tableWidth, $_maxDesktopWidth);
-  padding-bottom: adaptiveSizePx(7, 10, $_tableWidth, $_maxDesktopWidth);
+//   margin-left: adaptiveSizePx(5, 50, $_smPhoneWidth, $_maxDesktopWidth);
+//   padding-top: adaptiveSizePx(7, 10, $_tableWidth, $_maxDesktopWidth);
+//   padding-bottom: adaptiveSizePx(7, 10, $_tableWidth, $_maxDesktopWidth);
 
-  width: adaptiveSizePx(80, 100, 768, 1440);
+//   width: adaptiveSizePx(80, 100, 768, 1440);
 
-  border-radius: 5px;
-  border: 2px solid #25272a;
+//   border-radius: 5px;
+//   border: 2px solid #25272a;
 
-  font-size: adaptiveSizePx(15, 18, $_phoneWidth, $_maxDesktopWidth);
-  font-weight: 600;
+//   font-size: adaptiveSizePx(15, 18, $_phoneWidth, $_maxDesktopWidth);
+//   font-weight: 600;
 
-  color: #fff;
+//   color: #fff;
 
-  &:hover {
-    border: none;
-    background-color: #000;
-    color: #fff;
-  }
-}
+//   &:hover {
+//     border: none;
+//     background-color: #000;
+//     color: #fff;
+//   }
+// }
 
-.sign-link--active,
-.sign-link--active:hover {
-  background-color: #000;
-  color: #fff;
+// .sign-link--active,
+// .sign-link--active:hover {
+//   background-color: #000;
+//   color: #fff;
 
-  border: 2px solid #fff;
-}
+//   border: 2px solid #fff;
+// }
 
-.add-channel-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+// .add-channel-btn {
+//   //
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
 
-  align-self: center;
+//   align-self: center;
 
-  width: adaptiveSizePx(80, 100, 768, 1440);
+//   width: adaptiveSizePx(80, 100, 768, 1440);
 
-  background-color: #000;
+//   background-color: #000;
 
-  border-radius: 5px;
-  border: 2px solid #ffffff;
+//   border-radius: 5px;
+//   border: 2px solid #ffffff;
 
-  font-size: adaptiveSizePx(15, 30, $_phoneWidth, $_maxDesktopWidth);
-  font-weight: 600;
+//   font-size: adaptiveSizePx(15, 30, $_phoneWidth, $_maxDesktopWidth);
+//   font-weight: 600;
 
-  color: #fff;
-}
+//   color: #fff;
+// }
 
-@import "./menu-icon.scss";
+// @import "./menu-icon.scss";
 
-@media screen and (max-width: $tableWidth) {
-  .user-profile {
-    position: relative;
-    padding-right: 0;
-    flex-direction: row-reverse;
-  }
+// @media screen and (max-width: $tableWidth) {
+// .user-profile {
+//   //
+//   position: relative;
+//   padding-right: 0;
+//   flex-direction: row-reverse;
+// }
 
-  .wrapper-icon-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+// .wrapper-icon-menu {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
 
-    margin-right: 2vw;
+//   margin-right: 2vw;
 
-    z-index: 20;
-    transform: translateX(0%);
-    transition: all 0.4s;
+//   z-index: 20;
+//   transform: translateX(0%);
+//   transition: all 0.4s;
 
-    &.wrapper-icon-menu-active {
-      position: absolute;
-      top: 3vh;
-      transform: translateX(-30vw);
-    }
-  }
+//   &.wrapper-icon-menu-active {
+//     position: absolute;
+//     top: 3vh;
+//     transform: translateX(-30vw);
+//   }
+// }
 
-  .wrapper-link-menu {
-    position: absolute;
-    transform: translateX(500%);
-    transition: all 0.4s;
-    &.wrapper-link-menu-open {
-      width: 30vw;
-      transform: translateX(0%);
-    }
-  }
+// .wrapper-link-menu {
+//   //
+//   position: absolute;
+//   transform: translateX(500%);
+//   transition: all 0.4s;
+//   &.wrapper-link-menu-open {
+//     //
+//     width: 30vw;
+//     transform: translateX(0%);
+//   }
+// }
 
-  .response-menu-burger {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+// .response-menu-burger {
+//   //
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: flex-start;
 
-    width: 100%;
-    height: 100vh;
+//   width: 100%;
+//   height: 100vh;
 
-    padding-top: 4vh;
+//   padding-top: 4vh;
 
-    background-color: #25272a;
+//   background-color: #25272a;
 
-    z-index: 10;
-  }
+//   z-index: 10;
+// }
 
-  .sign-link {
-    margin-left: 0;
-    margin-bottom: 5%;
-  }
-}
+// .sign-link {
+//   margin-left: 0;
+//   margin-bottom: 5%;
+// }
+// }
 
-@media screen and (max-width: $phoneWidth) {
-  .wrapper-link-menu {
-    position: absolute;
-    width: 100vw;
-  }
+// @media screen and (max-width: $phoneWidth) {
+// .wrapper-link-menu {
+//   //
+//   position: absolute;
+//   width: 100vw;
+// }
 
-  .wrapper-icon-menu {
-    &.wrapper-icon-menu-active {
-      transform: translateX(0vw);
-    }
-  }
+// .wrapper-icon-menu {
+//   &.wrapper-icon-menu-active {
+//     transform: translateX(0vw);
+//   }
+// }
 
-  .wrapper-link-menu {
-    &.wrapper-link-menu-open {
-      width: 100vw;
-    }
-  }
-}
+// .wrapper-link-menu {
+//   //
+//   &.wrapper-link-menu-open {
+//     width: 100vw;
+//   }
+// }
+// }
