--- a/src/assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss
+++ b/src/assets/css/blocks/main/auth-page/form-edit-user-info/form-edit-user-info.scss
@@ -15,3 +15,34 @@
   flex-direction: row;
   justify-content: center;
 }
+
+.form-messages__input {
+  flex: 0 1 80%;
+
+  padding: 1% 1%;
+  margin: 0 1%;
+
+  border-radius: 5px;
+  border: 1px solid #000;
+
+  background-color: #f4f5f4;
+
+  outline: none;
+
+  font-size: adaptiveSizePx(10, 16, $_smPhoneWidth, $_maxDesktopWidth);
+  line-height: adaptiveSizePx(10, 16, $_smPhoneWidth, $_maxDesktopWidth);
+  font-weight: bold;
+
+  &:focus {
+    max-height: 300px;
+    border: 1px solid #ff000070;
+  }
+
+  &:focus::placeholder {
+    font-size: 0;
+  }
+
+  &::placeholder {
+    font-weight: 400;
+  }
+}
