--- a/src/assets/css/blocks/main/auth-page/main-desktop.scss
+++ b/src/assets/css/blocks/main/auth-page/main-desktop.scss
@@ -1,20 +1,21 @@
-.main-content {
-  display: flex;
-  flex-direction: row;
+// .main-content {
+//   display: flex;
 
-  flex: 0 1 100%;
+//   flex-direction: row;
 
-  background-color: #fff;
+//   flex: 0 1 100%;
 
-  z-index: 21;
-}
+//   background-color: #fff;
 
-.container-content {
-  position: relative;
+//   z-index: 21;
+// }
 
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+// .container-content {
+//   position: relative;
 
-  width: 100%;
-}
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: flex-start;
+
+//   width: 100%;
+// }
